--- a/services/gundeck/package.yaml
+++ b/services/gundeck/package.yaml
@@ -113,6 +113,7 @@ executables:
     - unordered-containers
     - uuid
     - wai
+    - wai-utilities
     - warp
     - warp-tls
     - websockets >=0.8
