Gundeck: Avoid dropping messages when redis is down (#2295)
Right now, if redis is down, the lookup of presences which happens before the storage of notifications in cassandra, leads to messages unable to be persisted in the case of redis downtime. That's not necessary. This PR moves the "lookup presence location in redis" part further down in the "pushAll" function, making gundeck's code more tolerant to redis downtimes. An integration test is provided (using a tcp proxy to redis) to cover this case.

--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -3,8 +3,6 @@ cabal-version: 1.12
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 14e7d21fd4304ef1b51679e0624e9c632777ddb5e43509ed96d4dff1a2ab1f27
 
 name:           gundeck
 version:        1.45.0
@@ -219,6 +217,7 @@ executable gundeck-integration
       API
       Metrics
       TestSetup
+      Util
       Paths_gundeck
   hs-source-dirs:
       test/integration
@@ -280,14 +279,19 @@ executable gundeck-integration
     , http-client
     , http-client-tls
     , imports
+    , kan-extensions
     , lens
     , lens-aeson
+    , metrics-wai
     , mtl
+    , network
+    , network-run
     , network-uri
     , optparse-applicative
     , random
     , retry
     , safe
+    , streaming-commons
     , tagged
     , tasty >=1.0
     , tasty-hunit >=0.9
@@ -295,8 +299,13 @@ executable gundeck-integration
     , time
     , tinylog
     , types-common
+    , unix
     , unordered-containers
     , uuid
+    , wai
+    , wai-utilities
+    , warp
+    , warp-tls
     , websockets >=0.8
     , yaml
   default-language: Haskell2010
