Hedis redis driver (#2151)
Motivation: [hedis](https://github.com/informatikr/hedis) has support for redis [clusters](https://redis.io/topics/cluster-tutorial).

Also see discussion on https://github.com/zinfra/cailleach/pull/894 - part of https://wearezeta.atlassian.net/browse/BM-68

Related PR: https://github.com/zinfra/cailleach/pull/923

The new config option is mandatory; but set to "master" by default in the helm chart; meaning no change is needed by any operator of a kubernetes environment. (The above PR covers the case of a non-k8s environment).

This PR, whilst giving the option of cluster mode, does not yet enable this in tests. A follow-up PR will do this in tests.

--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -19,6 +19,7 @@ config:
   redis:
     host: redis-ephemeral-master
     port: 6379
+    connectionMode: "master" # master | cluster
   bulkPush: true
   aws:
     region: "eu-west-1"
