--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -117,6 +117,7 @@ library
     , extended
     , extra >=1.1
     , gundeck-types >=1.0
+    , hedis >=0.14.0
     , http-client >=0.4
     , http-client-tls >=0.2.2
     , http-types >=0.8
@@ -126,10 +127,10 @@ library
     , metrics-core >=0.2.1
     , metrics-wai >=0.5.7
     , mtl >=2.2
+    , network
     , network-uri >=2.6
     , optparse-applicative >=0.10
     , psqueues >=0.2.2
-    , redis-io >=0.4
     , resourcet >=1.1
     , retry >=0.5
     , safe-exceptions
@@ -285,7 +286,6 @@ executable gundeck-integration
     , metrics-wai
     , mtl
     , network
-    , network-run
     , network-uri
     , optparse-applicative
     , random
