Add API fetch test in federator

--- a/services/federator/federator.cabal
+++ b/services/federator/federator.cabal
@@ -464,6 +464,7 @@ test-suite federator-tests
     , hinotify
     , http-client
     , http-client-openssl
+    , http-client-tls
     , http-media
     , http-types
     , http2
