--- a/services/federator/package.yaml
+++ b/services/federator/package.yaml
@@ -113,6 +113,7 @@ tests:
     - bytestring
     - directory
     - federator
+    - http-client-tls
     - interpolate
     - QuickCheck
     - servant-client
