--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -91,6 +91,8 @@ library
       Brig.Queue.Types
       Brig.RPC
       Brig.Run
+      Brig.Sem.AccountStore
+      Brig.Sem.AccountStore.Cassandra
       Brig.Sem.CodeStore
       Brig.Sem.CodeStore.Cassandra
       Brig.Sem.PasswordResetStore
