config to write to additional redis

--- a/services/gundeck/gundeck.integration.yaml
+++ b/services/gundeck/gundeck.integration.yaml
@@ -10,11 +10,14 @@ cassandra:
   # filterNodesByDatacentre: datacenter1
 
 redis:
-  # host: redis-cluster-leader-headless.joe-experiments-3
-  # port: 6379
-  host: localhost
+  host: 127.0.0.1
+  port: 6379
+  connectionMode: master # master | cluster
+
+redisAdditionalWrite:
+  host: 127.0.0.1
   port: 6377
-  connectionMode: "cluster" # master | cluster
+  connectionMode: cluster
 
 aws:
   queueName: integration-gundeck-events
