strange, cannot connect to these redis-cluster machines
I, starting connection to main-redis..., connectionMode=Cluster, connInfo=ConnInfo {connectHost = "127.0.0.1", connectPort = PortNumber 6377, connectAuth = Nothing, connectDatabase = 0, connectMaxConnections = 100, connectMaxIdleTime = 30s, connectTimeout = Just 5s, connectTLSParams = Nothing}
I, starting connection to redis in cluster mode ...
gundeck: ConnectionLost

--- a/services/gundeck/gundeck.integration.yaml
+++ b/services/gundeck/gundeck.integration.yaml
@@ -11,13 +11,13 @@ cassandra:
 
 redis:
   host: 127.0.0.1
-  port: 6379
-  connectionMode: master # master | cluster
-
-redisAdditionalWrite:
-  host: 127.0.0.1
   port: 6377
-  connectionMode: cluster
+  connectionMode: cluster # master | cluster
+
+# redisAdditionalWrite:
+#   host: 127.0.0.1
+#   port: 6379
+#   connectionMode: master
 
 aws:
   queueName: integration-gundeck-events
