--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -60,6 +60,7 @@ library
       Spar.Sem.IdPRawMetadataStore.Mem
       Spar.Sem.IdPRawMetadataStore.Spec
       Spar.Sem.Logger
+      Spar.Sem.Logger.Level
       Spar.Sem.Logger.TinyLog
       Spar.Sem.Reporter
       Spar.Sem.Reporter.Wai
