Get rid of api-version special cases in federator

--- a/libs/wire-api-federation/wire-api-federation.cabal
+++ b/libs/wire-api-federation/wire-api-federation.cabal
@@ -85,6 +85,7 @@ library
     , either
     , errors
     , exceptions
+    , http-media
     , http-types
     , http2
     , imports
@@ -188,6 +189,7 @@ test-suite spec
     , errors
     , exceptions
     , hspec
+    , http-media
     , http-types
     , http2
     , imports
