--- a/libs/tasty-cannon/tasty-cannon.cabal
+++ b/libs/tasty-cannon/tasty-cannon.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 33f3a557e5296946dc5929fd741dfa0bb68e83484e1760cd425204e7defec8af
+-- hash: be26c1ad508de205143282797883e24b2b8ba5dad64b576df52e8c2665bb3c32
 
 name:           tasty-cannon
 version:        0.4.0
@@ -73,7 +73,6 @@ library
     , bytestring-conversion
     , data-timeout
     , exceptions
-    , gundeck-types
     , http-client >=0.5
     , http-types
     , imports
@@ -81,4 +80,5 @@ library
     , tasty-hunit >=0.9
     , types-common >=0.16
     , websockets >=0.8
+    , wire-api
   default-language: Haskell2010
