--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -238,6 +238,7 @@ test-suite cannon-tests
     , types-common
     , uuid
     , wai-utilities
+    , wire-api
   default-language: Haskell2010
 
 benchmark cannon-bench
