--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -307,6 +307,7 @@ executable gundeck-integration
     , warp
     , warp-tls
     , websockets >=0.8
+    , wire-api
     , yaml
   default-language: Haskell2010
 
@@ -467,6 +468,7 @@ test-suite gundeck-tests
     , unordered-containers
     , uuid
     , wai-utilities
+    , wire-api
   default-language: Haskell2010
 
 benchmark gundeck-bench
