--- a/hack/helmfile.yaml
+++ b/hack/helmfile.yaml
@@ -31,6 +31,9 @@ repositories:
   - name: stable
     url: 'https://charts.helm.sh/stable'
 
+  - name: bitnami
+    url: 'https://charts.bitnami.com/bitnami'
+
 releases:
   - name: '{{ .Values.namespace }}-fake-aws'
     namespace: '{{ .Values.namespace }}'
@@ -51,6 +54,14 @@ releases:
   - name: '{{ .Values.namespace }}-databases-ephemeral-2'
     namespace: '{{ .Values.namespaceFed2 }}'
     chart: '../.local/charts/databases-ephemeral'
+
+  - name: '{{ .Values.namespace }}-redis-cluster'
+    namespace: '{{ .Values.namespace }}'
+    chart: '../.local/charts/redis-cluster'
+
+  - name: '{{ .Values.namespace }}-redis-cluster-2'
+    namespace: '{{ .Values.namespaceFed2 }}'
+    chart: '../.local/charts/redis-cluster'
 
   - name: '{{ .Values.namespace }}-nginx-ingress-controller'
     namespace: '{{ .Values.namespace }}'
