As we don't have PVCs in CI, use an ephemeral redis as second redis?

--- a/charts/gundeck/templates/tests/configmap.yaml
+++ b/charts/gundeck/templates/tests/configmap.yaml
@@ -38,6 +38,6 @@ data:
 
     # a "redis migration" test in gundeck makes use of a second (distinct) redis
     redis2:
-      host: redis-ephemeral-master
+      host: redis2-master
       port: 6379
       connectionMode: master
