Revert "As we don't have PVCs in CI, use an ephemeral redis as second redis?"
This reverts commit 706133a30c165791ee760d712d8dce09efe4ccdb.

--- a/hack/helmfile-single.yaml
+++ b/hack/helmfile-single.yaml
@@ -33,9 +33,9 @@ releases:
     namespace: '{{ .Values.namespace }}'
     chart: '../.local/charts/databases-ephemeral'
 
-  - name: '{{ .Values.namespace }}-redis2'
+  - name: '{{ .Values.namespace }}-redis-cluster'
     namespace: '{{ .Values.namespace }}'
-    chart: '../.local/charts/redis-ephemeral'
+    chart: '../.local/charts/redis-cluster'
 
   - name: '{{ .Values.namespace }}-nginx-ingress-controller'
     namespace: '{{ .Values.namespace }}'
