--- a/hack/helmfile.yaml
+++ b/hack/helmfile.yaml
@@ -55,9 +55,13 @@ releases:
     namespace: '{{ .Values.namespaceFed2 }}'
     chart: '../.local/charts/databases-ephemeral'
 
-  - name: '{{ .Values.namespace }}-redis2'
+  - name: '{{ .Values.namespace }}-redis-cluster'
     namespace: '{{ .Values.namespace }}'
-    chart: '../.local/charts/redis-ephemeral'
+    chart: '../.local/charts/redis-cluster'
+
+  - name: '{{ .Values.namespace }}-redis-cluster-2'
+    namespace: '{{ .Values.namespaceFed2 }}'
+    chart: '../.local/charts/redis-cluster'
 
   - name: '{{ .Values.namespace }}-nginx-ingress-controller'
     namespace: '{{ .Values.namespace }}'
