--- a/hack/helmfile.yaml
+++ b/hack/helmfile.yaml
@@ -58,10 +58,16 @@ releases:
   - name: '{{ .Values.namespace }}-redis-cluster'
     namespace: '{{ .Values.namespace }}'
     chart: '../.local/charts/redis-cluster'
+    values:
+      - global:
+          storageClass: csi-hostpath-sc
 
   - name: '{{ .Values.namespace }}-redis-cluster-2'
     namespace: '{{ .Values.namespaceFed2 }}'
     chart: '../.local/charts/redis-cluster'
+    values:
+      - global:
+          storageClass: csi-hostpath-sc
 
   - name: '{{ .Values.namespace }}-nginx-ingress-controller'
     namespace: '{{ .Values.namespace }}'
