ci/redis-cluster: Configure so it runs
* volumePermissions.enable make it run an initContainer which fixes the
permissions on the mounted volume, so it can be accessed by the non-root user
which runs redis.

* persistence.size is set to 100 Mi, so it doesn't kill the cluster.

--- a/hack/helmfile-single.yaml
+++ b/hack/helmfile-single.yaml
@@ -36,6 +36,8 @@ releases:
   - name: '{{ .Values.namespace }}-redis-cluster'
     namespace: '{{ .Values.namespace }}'
     chart: '../.local/charts/redis-cluster'
+    values:
+      - './helm_vars/redis-cluster/values.yaml'
 
   - name: '{{ .Values.namespace }}-nginx-ingress-controller'
     namespace: '{{ .Values.namespace }}'
