fullnameOverride: fix typo leading to override to have no effect

--- a/charts/redis-cluster/values.yaml
+++ b/charts/redis-cluster/values.yaml
@@ -1,5 +1,3 @@
 redis-cluster:
   usePassword: false
-  fullNameOverride: "redis-cluster"
-  # global:
-  #   storageClass: "-"
+  fullnameOverride: "redis-cluster"
