Prevent duplicated rendering of FEATURE_ENABLE_PAYMENT
If the FEATURE_ENABLE_PAYMENT feature flag is set by envVars, do not
render it again. Otherwise, we might end up in confusing cases like: The
flag was set to true, but it's additionally rendered with a default to
false.

--- a/charts/team-settings/templates/deployment.yaml
+++ b/charts/team-settings/templates/deployment.yaml
@@ -40,10 +40,13 @@ spec:
             value: https://{{ .Values.config.externalUrls.backendRest }}
           - name: BACKEND_WS
             value: wss://{{ .Values.config.externalUrls.backendWebsocket }}
+
+          {{- if not (hasKey .Values.envVars "FEATURE_ENABLE_PAYMENT") }}
             # NOTE defaults to 'true', but since we assume on-prem here, we default to 'false'
             # SRC https://github.com/wireapp/wire-web-config-default/blob/master/wire-team-settings/.env.defaults#L48
           - name: FEATURE_ENABLE_PAYMENT
             value: {{ .Values.config.enablePayment | default false | quote }}
+          {{- end }}
       {{- range $key, $val := .Values.envVars }}
           - name: {{ $key }}
             value: {{ $val | quote }}
