--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -214,6 +214,7 @@ library
     , errors >=1.4
     , exceptions >=0.5
     , extended
+    , file-embed-lzma
     , filepath >=1.3
     , fsnotify >=0.2
     , galley-types >=0.75.3
