--- a/deploy/services-demo/conf/gundeck.demo.yaml
+++ b/deploy/services-demo/conf/gundeck.demo.yaml
@@ -11,7 +11,7 @@ cassandra:
 redis:
   host: 127.0.0.1
   port: 6379
-  connectionMode: cluster
+  connectionMode: master
 
 aws:
   queueName: integration-gundeck-events
