charts/galley: Optional AWS creds, allow setting serviceAccountName
This commit also removes the unnecessarily mounted secret. All the information
in the secret gets exposed as environment variable anyway.

--- a/charts/galley/templates/secret.yaml
+++ b/charts/galley/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if hasKey .Values.secrets "awsKeyId" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,3 +14,4 @@ data:
   awsKeyId: {{ .awsKeyId | b64enc | quote }}
   awsSecretKey: {{ .awsSecretKey | b64enc | quote }}
   {{- end }}
+{{- end }}
