--- a/charts/gundeck/templates/secret.yaml
+++ b/charts/gundeck/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if hasKey .Values.secrets "awsKeyId" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,3 +14,4 @@ data:
   awsKeyId: {{ .awsKeyId | b64enc | quote }}
   awsSecretKey: {{ .awsSecretKey | b64enc | quote }}
   {{- end }}
+{{- end }}
