--- a/charts/cargohold/templates/secret.yaml
+++ b/charts/cargohold/templates/secret.yaml
@@ -16,7 +16,9 @@ data:
   {{ if .cloudFront }}
   cf-pk.pem: {{ .cloudFront.cfPrivateKey | b64enc | quote }}
   {{ end }}
-  
+
+  {{- if .awsKeyId }}
   awsKeyId: {{ .awsKeyId | b64enc | quote }}
   awsSecretKey: {{ .awsSecretKey | b64enc | quote }}
+  {{- end }}
   {{- end }}
