--- a/charts/brig/templates/secret.yaml
+++ b/charts/brig/templates/secret.yaml
@@ -16,8 +16,10 @@ data:
   secretkey.txt: {{ .zAuth.privateKeys | b64enc | quote }}
   publickey.txt: {{ .zAuth.publicKeys | b64enc | quote }}
   turn-secret.txt: {{ .turn.secret | b64enc | quote }}
+  {{- if .awsKeyId }}
   awsKeyId: {{ .awsKeyId | b64enc | quote }}
   awsSecretKey: {{ .awsSecretKey | b64enc | quote }}
+  {{- end }}
   twilio-credentials.yaml: {{ .setTwilio | b64enc | quote }}
   nexmo-credentials.yaml: {{ .setNexmo | b64enc | quote }}
   {{- if (not $.Values.config.useSES) }}
