update deps of libzauth (#2327)
Upgrade version of libzauth dependencies, notably sodiumoxide bindings to libsodium, and fix resulting errors and warnings.

(libzauth is used as part of the nginz module for authorization)

Co-authored-by: Marko Dimjašević <marko.dimjasevic@wire.com>
Co-authored-by: Sebastian Willenborg <sebastian.willenborg@wire.com>

--- a/libs/libzauth/libzauth-c/Makefile
+++ b/libs/libzauth/libzauth-c/Makefile
@@ -43,7 +43,11 @@ uninstall:
 	rm -f $(PREFIX_INSTALL)/lib/libzauth.$(LIB_TYPE)
 	rm -f $(PREFIX_INSTALL)/lib/pkgconfig/libzauth.pc
 
-dist: build-release
+.PHONY: test
+test:
+	cd ../libzauth && cargo test --release
+
+dist: test build-release
 	mkdir -p deb$(PREFIX_PACKAGE)/include
 	mkdir -p deb$(PREFIX_PACKAGE)/lib/pkgconfig
 	cp src/zauth.h deb$(PREFIX_PACKAGE)/include/
