charts/galley: Rename journal.queue -> journal.queueName

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -43,7 +43,7 @@ data:
 
     {{- if (.journal) }}
     journal:
-      queueName: {{ .journal.queue }}
+      queueName: {{ .journal.queueName }}
       endpoint: {{ .journal.endpoint }}
     {{- end }}
 
