--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -28,6 +28,10 @@ config:
   aws:
     region: "eu-west-1"
   proxy: {}
+  settings:
+    # perNativePushConcurrency
+    maxConcurrentNativePushes:
+      soft: 1000
 serviceAccount:
   # When setting this to 'false', either make sure that a service account named
   # 'gundeck' exists or change the 'name' field to 'default'
