Adapt wire-server charts so they can be used to run wire cloud (#2347)
charts/{brig,cargohold,galley,gundeck}: Allow not configuring AWS credentials and allow using a special service account.
This way, when operating wire in AWS cloud either instance profiles or IAM role attached to a service account can be used to communicate with AWS.

Allow new configurations in the brig chart:
* `config.emailSMS.user.invitationUrl`
* `config.emailSMS.team.tInvitationUrl`
* `config.emailSMS.team.tActivationUrl`
* `config.emailSMS.team.tCreatorWelcomeUrl`
* `config.emailSMS.team.tMemberWelcomeUrl`
* `config.setProviderSearchFilter`
* `config.setWhitelist`
* `config.setFeatureFlags`
* `config.setCustomerExtensions`

If any values in config.emailSMS.team are specified, all must be specified.

Allow new configurations in the gundeck chart:
* `config.perNativePushConcurrency`
* `config.maxConcurrentNativePushes.soft`
* `config.maxConcurrentNativePushes.hard`

Other changes:
* Default `maxTeamSize` changed from 500 to 10000. (larger teams have been supported by wire-server code for a while; but the default value had not been increased yet)

Co-authored-by: jschaul <jschaul@users.noreply.github.com>

--- a/charts/cargohold/templates/deployment.yaml
+++ b/charts/cargohold/templates/deployment.yaml
@@ -27,6 +27,7 @@ spec:
         checksum/configmap: {{ include (print .Template.BasePath "/configmap.yaml") . | sha256sum }}
         checksum/secret: {{ include (print .Template.BasePath "/secret.yaml") . | sha256sum }}
     spec:
+      serviceAccountName: {{ .Values.serviceAccount.name }}
       volumes:
         - name: "cargohold-config"
           configMap:
@@ -44,6 +45,7 @@ spec:
           - name: "cargohold-config"
             mountPath: "/etc/wire/cargohold/conf"
           env:
+          {{- if hasKey .Values.secrets "awsKeyId" }}
           - name: AWS_ACCESS_KEY_ID
             valueFrom:
               secretKeyRef:
@@ -54,6 +56,7 @@ spec:
               secretKeyRef:
                 name: cargohold
                 key: awsSecretKey
+          {{- end }}
           - name: AWS_REGION
             value: "{{ .Values.config.aws.region }}"
           {{- with .Values.config.proxy }}
