--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -28,3 +28,15 @@ config:
   aws:
     region: "eu-west-1"
   proxy: {}
+  # perNativePushConcurrency: 32
+  maxConcurrentNativePushes:
+    soft: 1000
+serviceAccount:
+  # When setting this to 'false', either make sure that a service account named
+  # 'gundeck' exists or change the 'name' field to 'default'
+  create: true
+  name: gundeck
+  annotations: {}
+  automountServiceAccountToken: true
+
+secrets: {}
