--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -745,6 +745,7 @@ test-suite brig-tests
     , containers
     , dns
     , dns-util
+    , exceptions
     , http-types
     , imports
     , lens
