--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -10,20 +10,10 @@ copyright: (c) 2017 Wire Swiss GmbH
 license: AGPL-3
 ghc-options:
 - -funbox-strict-fields
-custom-setup:
-  dependencies:
-    - Cabal
-    - base
-    - containers
-    - directory
-    - filepath
-    - text
 extra-source-files:
   - docs/*
 library:
   source-dirs: src
-  generated-other-modules:
-    - Brig.Docs.Swagger
   dependencies:
   - aeson >=2.0.1.0
   - amazonka >=1.3.7
@@ -58,6 +48,7 @@ library:
   - errors >=1.4
   - exceptions >=0.5
   - extended
+  - file-embed-lzma
   - filepath >=1.3
   - fsnotify >=0.2
   - galley-types >=0.75.3
