refactor withSettingsOverride: spawn http server

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -437,6 +437,7 @@ executable galley-integration
     , http-media
     , http-types
     , imports
+    , kan-extensions
     , lens
     , lens-aeson
     , metrics-wai
