--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -193,6 +193,7 @@ executables:
     - http-client-tls
     - http-media
     - http-types
+    - kan-extensions
     - lens
     - lens-aeson
     - mtl
