Move nix expressions to nix/default.nix
Make default.nix expose an attrset with pkgs, devPackages, devEnv

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
-env=$(nix-build --no-out-link "$PWD/direnv.nix")
+env=$(nix-build --no-out-link "$PWD/nix" -A devEnv)
 PATH_add "${env}/bin"
 
 # allow local .envrc overrides
