Expose devEnv at ./.env
This also speeds up direnv loading

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,18 @@
-env=$(nix-build --no-out-link "$PWD/nix" -A devEnv)
-PATH_add "${env}/bin"
+# Build a folder ./.env that contains all the tools
+# To speed up the nix evaluation, we only rebuild our environment when `./nix`
+# changes. We do this by adding its contents to the nix store and using its
+# store path as a cache key. We only use this to build the dev environment. This
+# will fail building in case anything inside the devEnv is reaching outside
+# the nix/ subfolder
+store_path=$(nix-store --add ./nix/)
+layout_dir=$(direnv_layout_dir)
+[[ -d "$layout_dir" ]] || mkdir -p "$layout_dir"
+if [[ ! -d ./.env || ! -f "$layout_dir/nix-rebuild" || "$store_path" != $(< "$layout_dir/nix-rebuild" ) ]]; then
+  nix-build "$store_path" -A devEnv --out-link ./.env
+  echo "$store_path" > "$layout_dir/nix-rebuild"
+fi
+
+PATH_add "./.env/bin"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
