--- a/.envrc
+++ b/.envrc
@@ -14,5 +14,9 @@ fi
 
 PATH_add "./.env/bin"
 
+# source .profile from `$env`.
+# This is only used to set things interpolated by nix. All static things should live inside here.
+[[ -f "./.env/.profile" ]] && source_env "./.env/.profile"
+
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
