Add helpful comments to .envrc

--- a/.envrc
+++ b/.envrc
@@ -8,15 +8,19 @@ store_path=$(nix-store --add ./nix/)
 layout_dir=$(direnv_layout_dir)
 [[ -d "$layout_dir" ]] || mkdir -p "$layout_dir"
 if [[ ! -d ./.env || ! -f "$layout_dir/nix-rebuild" || "$store_path" != $(< "$layout_dir/nix-rebuild" ) ]]; then
+
+  # this builds "devEnv" defined in ./nix/default.nix and outputs to ./.env
   nix-build "$store_path" -A devEnv --out-link ./.env
+
   echo "$store_path" > "$layout_dir/nix-rebuild"
 fi
 
 PATH_add "./.env/bin"
 
-# source .profile from `$env`.
-# This is only used to set things interpolated by nix. All static things should live inside here.
-[[ -f "./.env/.profile" ]] && source_env "./.env/.profile"
+# source .profile from `$env`. This sets NIX_PATH to pkgs defined in
+# ./nix/default.nix. Tis is useful for nix tooling that runs inside this direnv,
+# e.g. "nix-shell -p foo" will get "foo" for pkgs defined in ./nix/default.nix
+ [[ -f "./.env/.profile" ]] && source_env "./.env/.profile"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
