Brig: Refactor SFT Discovery tests
* Simplify sftDiscoveryLoop tests and make them srvDiscoveryLoop tests
* Introduce a Delay Effect to deal with threadDelay and mock it to get rid of
wait loop in tests

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -65,6 +65,7 @@ library
       Brig.Data.User
       Brig.Data.UserKey
       Brig.Data.UserPendingActivation
+      Brig.Effects.Delay
       Brig.Effects.SFT
       Brig.Email
       Brig.Federation.Client
@@ -688,6 +689,7 @@ test-suite brig-tests
   other-modules:
       Test.Brig.Calling
       Test.Brig.Calling.Internal
+      Test.Brig.Effects.Delay
       Test.Brig.MLS
       Test.Brig.Roundtrip
       Test.Brig.User.Search.Index.Types
@@ -743,6 +745,7 @@ test-suite brig-tests
     , brig-types
     , bytestring
     , containers
+    , data-timeout
     , dns
     , dns-util
     , exceptions
