Refactor nix setup and speed up direnv (#2383)

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,26 @@
-env=$(nix-build --no-out-link "$PWD/direnv.nix")
-PATH_add "${env}/bin"
+# Build a folder ./.env that contains all the tools
+# To speed up the nix evaluation, we only rebuild our environment when `./nix`
+# changes. We do this by adding its contents to the nix store and using its
+# store path as a cache key. We only use this to build the dev environment. This
+# will fail building in case anything inside the devEnv is reaching outside
+# the nix/ subfolder
+store_path=$(nix-store --add ./nix/)
+layout_dir=$(direnv_layout_dir)
+[[ -d "$layout_dir" ]] || mkdir -p "$layout_dir"
+if [[ ! -d ./.env || ! -f "$layout_dir/nix-rebuild" || "$store_path" != $(< "$layout_dir/nix-rebuild" ) ]]; then
+
+  # this builds "devEnv" defined in ./nix/default.nix and outputs to ./.env
+  nix-build "$store_path" -A devEnv --out-link ./.env
+
+  echo "$store_path" > "$layout_dir/nix-rebuild"
+fi
+
+PATH_add "./.env/bin"
+
+# source .profile from `$env`. This sets NIX_PATH to pkgs defined in
+# ./nix/default.nix. Tis is useful for nix tooling that runs inside this direnv,
+# e.g. "nix-shell -p foo" will get "foo" for pkgs defined in ./nix/default.nix
+ [[ -f "./.env/.profile" ]] && source_env "./.env/.profile"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
