--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
      - name: Build the wire-server-direnv
-       run: nix-build --no-out-link direnv.nix
+       run: nix-build --no-out-link ./nix -A devEnv
      - name: Install the wire-server-direnv
-       run: nix-env -f direnv.nix -i
+       run: nix-env -if ./nix -A devEnv
