make mkApp return a Codensity of the (app, env)

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -210,6 +210,7 @@ library
     , http-types >=0.8
     , imports
     , insert-ordered-containers
+    , kan-extensions
     , lens >=4.4
     , memory
     , metrics-wai >=0.4
