Brig: Prepare for TURN Discovery using SRV records (#2376)
* Brig: Start turn discovery when the App start

Instead of starting it when the `Env` is created. This aligns the service
discovery of TURN with that of SFT. In next commits, SRV based discovery for
TURN will be implemented.

* Brig: Refactor SFT discovery to extract generic SRV discovery code

* Brig: Refactor SFT Discovery tests

* Simplify sftDiscoveryLoop tests and make them srvDiscoveryLoop tests

Introduce a Delay Effect to deal with threadDelay and mock it to get rid of
wait loop in tests

* CHANGELOG

--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -152,8 +152,10 @@ tests:
     - brig-types
     - bytestring
     - containers
+    - data-timeout
     - dns
     - dns-util
+    - exceptions
     - http-types
     - imports
     - lens
