--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -203,6 +203,7 @@ library
     , errors >=1.4
     , exceptions >=0.5
     , extended
+    , file-embed
     , file-embed-lzma
     , filepath >=1.3
     , fsnotify >=0.2
