--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -48,6 +48,7 @@ library:
   - errors >=1.4
   - exceptions >=0.5
   - extended
+  - file-embed
   - file-embed-lzma
   - filepath >=1.3
   - fsnotify >=0.2
