--- a/charts/brig/templates/turnconfigmap.yaml
+++ b/charts/brig/templates/turnconfigmap.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.turnDNS.enable }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,3 +13,4 @@ data:
 {{- include "turn-servers.txt" . | indent 4 }}
   turn-servers-v2.txt: |2
 {{- include "turn-servers-v2.txt" . | indent 4 }}
+{{- end }}
