--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -46,6 +46,7 @@ library
       Wire.API.Message.Proto
       Wire.API.MLS.CipherSuite
       Wire.API.MLS.Commit
+      Wire.API.MLS.Context
       Wire.API.MLS.Credential
       Wire.API.MLS.Extension
       Wire.API.MLS.Group
