Set the LANG variable in .envrc
- This stops setting it in the Makefile
- There is no need to set locale variables in tools/ormolu.sh any more

--- a/.envrc
+++ b/.envrc
@@ -24,3 +24,7 @@ PATH_add "./.env/bin"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
+
+# Locale
+export LC_ALL=en_US.UTF-8
+export LANG=en_US.UTF-8
